// apps/api/prisma/schema.prisma
// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model User {
  id            String   @id @default(uuid())
  name          String?
  email         String   @unique
  emailVerified Boolean  @default(false)
  image         String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  sessions          Session[]
  accounts          Account[]
  countries         UserCountry[]
  streamingServices UserStreamingService[]
  watchlistItems    WatchlistItem[]
  watchedItems      WatchedItem[]
  ratings           UserRating[]

  @@map("user")
}

model Session {
  id        String   @id @default(uuid())
  expiresAt DateTime
  token     String   @unique
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("session")
}

model Account {
  id                    String    @id @default(uuid())
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  @@map("account")
}

model Verification {
  id         String   @id @default(uuid())
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@map("verification")
}

model UserCountry {
  id          String   @id @default(uuid())
  userId      String
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  countryCode String
  createdAt   DateTime @default(now())

  @@unique([userId, countryCode])
  @@index([userId])
  @@map("user_country")
}

model UserStreamingService {
  id          String   @id @default(uuid())
  userId      String
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  providerId  Int
  countryCode String
  createdAt   DateTime @default(now())

  @@unique([userId, providerId, countryCode])
  @@index([userId])
  @@map("user_streaming_service")
}

model WatchlistItem {
  id        String   @id @default(uuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tmdbId    Int
  mediaType String
  createdAt DateTime @default(now())

  @@unique([userId, tmdbId, mediaType])
  @@map("watchlist_item")
}

model WatchedItem {
  id           String   @id @default(uuid())
  userId       String
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tmdbId       Int
  mediaType    String
  seasonNumber Int?
  createdAt    DateTime @default(now())

  @@unique([userId, tmdbId, mediaType, seasonNumber])
  @@map("watched_item")
}

model UserRating {
  id        String   @id @default(uuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tmdbId    Int
  mediaType String
  rating    Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, tmdbId, mediaType])
  @@map("user_rating")
}
