// docs/data-model.dbml
// FoundIt — Data Model
// Generated: 2026-07-03
// Better Auth manages: user, session, account, verification tables

// ─── BETTER AUTH TABLES (managed by Better Auth) ────────────────────────────

Table user {
  id            string    [pk, note: "UUID generated by Better Auth"]
  name          string
  email         string    [unique]
  emailVerified boolean
  image         string    [null]
  createdAt     datetime
  updatedAt     datetime

  Note: "Managed by Better Auth — do not modify manually"
}

Table session {
  id                   string    [pk]
  expiresAt            datetime
  token                string    [unique]
  ipAddress            string    [null]
  userAgent            string    [null]
  userId               string    [ref: > user.id]
  createdAt            datetime
  updatedAt            datetime

  Note: "Managed by Better Auth"
}

Table account {
  id                    string    [pk]
  accountId             string
  providerId            string
  userId                string    [ref: > user.id]
  accessToken           string    [null]
  refreshToken          string    [null]
  idToken               string    [null]
  accessTokenExpiresAt  datetime  [null]
  refreshTokenExpiresAt datetime  [null]
  scope                 string    [null]
  password              string    [null]
  createdAt             datetime
  updatedAt             datetime

  Note: "Managed by Better Auth — stores OAuth tokens and password hash"
}

Table verification {
  id         string    [pk]
  identifier string
  value      string
  expiresAt  datetime
  createdAt  datetime
  updatedAt  datetime

  Note: "Managed by Better Auth — email verification tokens"
}

// ─── FOUNDIT TABLES ──────────────────────────────────────────────────────────

Table UserCountry {
  id          string    [pk, note: "UUID"]
  userId      string    [ref: > user.id, note: "onDelete: Cascade"]
  countryCode string    [note: "ISO 3166-1 alpha-2, e.g. ES, SE, DE"]
  createdAt   datetime

  indexes {
    (userId, countryCode) [unique]
    userId
  }

  Note: "Countries the user wants to see streaming availability for"
}

Table UserStreamingService {
  id          string    [pk, note: "UUID"]
  userId      string    [ref: > user.id, note: "onDelete: Cascade"]
  providerId  int       [note: "TMDB watch provider ID, e.g. 8 = Netflix"]
  countryCode string    [note: "ISO 3166-1 alpha-2 — must exist in UserCountry"]
  createdAt   datetime

  indexes {
    (userId, providerId, countryCode) [unique]
    userId
  }

  Note: "Streaming services the user subscribes to, per country. Provider name and logo fetched from TMDB API — not stored here."
}

Table WatchlistItem {
  id        string    [pk, note: "UUID"]
  userId    string    [ref: > user.id, note: "onDelete: Cascade"]
  tmdbId    int       [note: "TMDB content ID"]
  mediaType string    [note: "'movie' | 'tv'"]
  createdAt datetime  [note: "addedAt — when the user added this item"]

  indexes {
    (userId, tmdbId, mediaType) [unique, note: "Prevents duplicates. TMDB IDs are not unique across media types."]
  }

  Note: "Titles the user wants to watch. Mutually exclusive with WatchedItem — marking as watched removes from here."
}

Table WatchedItem {
  id           string    [pk, note: "UUID"]
  userId       string    [ref: > user.id, note: "onDelete: Cascade"]
  tmdbId       int       [note: "TMDB content ID"]
  mediaType    string    [note: "'movie' | 'tv'"]
  seasonNumber int       [null, note: "null for movies. Season number for TV shows."]
  createdAt    datetime  [note: "watchedAt — when the user marked this as watched"]

  indexes {
    (userId, tmdbId, mediaType, seasonNumber) [unique, note: "Allows tracking multiple seasons of the same show independently"]
  }

  Note: "Watch history. TV shows tracked at season level (not episode). Marking a title as watched removes it from WatchlistItem."
}

Table UserRating {
  id        string    [pk, note: "UUID"]
  userId    string    [ref: > user.id, note: "onDelete: Cascade"]
  tmdbId    int       [note: "TMDB content ID"]
  mediaType string    [note: "'movie' | 'tv'"]
  rating    int       [note: "1–10 integer. Displayed separately from TMDB rating — never averaged."]
  createdAt datetime
  updatedAt datetime  [note: "Updated on upsert — tracks when user last modified their rating"]

  indexes {
    (userId, tmdbId, mediaType) [unique, note: "One rating per user per title. Upsert on conflict."]
  }

  Note: "Personal ratings. Independent from TMDB community rating."
}